--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3307/contactManager
+spring.datasource.url=jdbc:mysql://localhost:3307/contactmanager
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=create
