--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,5 @@ spring.devtools.livereload.enabled=true
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.servlet.multipart.enabled=true
-
+spring.mvc.throw-exception-if-no-handler-found=true
 logging.level.org.springframework.security=DEBUG
